# agent-tools

./: README.md
langgraph-bigtool/: Makefile  README.md  pyproject.toml
langgraph-bigtool/langgraph_bigtool/: __init__.py  graph.py  tools.py  utils.py
langgraph-bigtool/tests/integration_tests/: test_end_to_end.py
langgraph-bigtool/tests/unit_tests/: test_end_to_end.py
notes/: 01-research-plan.md  02-project-overview.md  03-architecture-analysis.md  04-core-code-analysis.md  05-performance-analysis.md  06-application-scenarios.md  07-technology-comparison.md  08-code-quality-assessment.md  09-future-development.md  10-research-methodology.md  11-risk-assessment.md
